# pytest-git-selector

./: .gitignore  LICENSE  README.md  SECURITY.md  pytest.ini  requirements-build.txt  requirements-python-package.txt  requirements-test.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: codeql.yml  python-package.yml  python-publish.yml
src/pytest_git_selector/: cmd.py  errors.py  plugin.py  selector.py  util.py
test/: conftest.py  test_cmd.py  test_plugin.py  test_selector.py
test/resources/medium_project_a/src/a/: a_3.py
test/resources/medium_project_a/src/b/: __init__.py
test/resources/medium_project_a/src/c/: __init__.py  c_1.py  c_2.py
test/resources/medium_project_a/src/d/: d_1.py
test/resources/medium_project_a/test/test_a/: test_a_1.py  test_a_2.py  test_a_3.py
test/resources/medium_project_a/test/test_b/: test_b.py  test_b_1.py  test_b_2.py
test/resources/medium_project_a/test/test_c/: test_c_1.py  test_c_2.py
test/resources/medium_project_a/test/test_d/: test_d_1.py
test/resources/sample_project_1/sample_project_1/: g.py
test/resources/sample_project_1/test/: test_f.py  test_g.py
test/resources/small_project_a/small_project_a/: g.py
test/resources/small_project_a/test/: test_f.py  test_g.py
test/resources/small_project_b/: extra_deps.txt
test/resources/small_project_b/small_project_b/: g.py  h.py
test/resources/small_project_b/small_project_b/f/: f_1.py
test/resources/small_project_b/test/: test_f.py  test_g.py  test_h.py  test_h_modulo_inputs.csv
