[metadata]
name = pytest-git-selector
description = Utility for finding test files to run based on git diff against the branch base


[options]
install_requires =
    gitpython
    importlab
    networkx
package_dir = 
    = src


[options.entry_points]
console_scripts = 
    git-select-tests = pytest_git_selector.cmd:main


[options.packages.find]
where = src
exclude = 
    test

[flake8]
exclude =
    .direnv
    .eggs
    .pytest_cache
    .tox
    build
    dist
    target
    venv

# Line length should match black's configuration in pyproject.toml
max-line-length = 120

ignore =
    # required for compatibility with black
    E203

    # required for compatibility with black
    W503
