[metadata]
name = pytest-git-selector
description = Utility for finding test files to run based on git diff against the branch base
long_description = file: README.md
keywords = pytest, git
license_files = file: LICENSE
classifiers = 
    Programming Language :: Python :: 3
    Framework :: Pytest


[options]
install_requires =
    gitpython
    importlab
    networkx
package_dir = 
    = src
python_requires = >=3.8


[options.entry_points]
console_scripts = 
    git-select-tests = pytest_git_selector.cmd:main
pytest11 = 
    git-selector = pytest_git_selector.plugin


[options.packages.find]
where = src
exclude = 
    test

[flake8]
exclude =
    .direnv
    .eggs
    .pytest_cache
    .tox
    build
    dist
    target
    test/resources/
    venv

# Line length should match black's configuration in pyproject.toml
max-line-length = 120

ignore =
    # required for compatibility with black
    E203

    # required for compatibility with black
    W503
