[metadata]
name = pytest-git-selector
description = Utility to select tests that have had its dependencies modified (as identified by git diff)
long_description = file: README.md
long_description_content_type = test/markdown
url = https://github.com/05798/pytest-git-selector
author = Leo Lark
keywords = pytest, git
license = MIT
license_files = file: LICENSE
project_urls = 
    Homepage = https://github.com/05798/pytest-git-selector
    Source = https://github.com/05798/pytest-git-selector
    Bug Tracker = https://github.com/05798/pytest-git-selector/issues
classifiers = 
    Programming Language :: Python :: 3
    Framework :: Pytest


[options]
install_requires =
    gitpython
    importlab
    networkx
package_dir = 
    = src
python_requires = >=3.8


[options.entry_points]
console_scripts = 
    git-select-tests = pytest_git_selector.cmd:main
pytest11 = 
    git-selector = pytest_git_selector.plugin


[options.packages.find]
where = src
exclude = 
    test

[flake8]
exclude =
    .direnv
    .eggs
    .pytest_cache
    .tox
    build
    dist
    target
    test/resources/
    venv

# Line length should match black's configuration in pyproject.toml
max-line-length = 120

ignore =
    # required for compatibility with black
    E203

    # required for compatibility with black
    W503
